# async-wormhole

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: test.yml
benches/: async_benchmark.rs
example/: Cargo.toml
example/src/: main.rs
examples/: async.rs  panic.rs
src/: lib.rs  pool.rs
stackpp/: Cargo.toml
stackpp/benches/: stackpp_benchmark.rs
stackpp/src/: eight_mb.rs  lib.rs  pre_allocated_stack.rs  pre_allocated_stack_.rs  utils.rs
stackpp/src/pre_allocated_stack/: mod.rs  unix.rs  windows.rs
stackpp/tests/: pre_allocated_stack_test.rs  stack_test.rs
switcheroo/: Cargo.toml  Readme.md  Redme.md  build.rs
switcheroo/benches/: switcheroo_benchmark.rs
switcheroo/examples/: generator_with_drop.rs
switcheroo/src/: lib.rs
switcheroo/src/arch/: mod.rs  unix_aarch64.rs  unix_x64.c  unix_x64.rs  windows_x64.rs
switcheroo/src/stack/: eight_mb.rs  mod.rs  one_mb.rs
switcheroo/tests/: stack_test.rs  switch_test.rs
tests/: async_test.rs
