[package]
name = "async_wormhole"
version = "0.1.0"
authors = ["Bernard Kolobara <me@kolobara.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-utils = "0.1"
switcheroo = { path = "./switcheroo", version = "0.1.0" }

[dev-dependencies]
futures = "0.3"
criterion = "0.3"
libc = "0.2"

[[bench]]
name = "async_benchmark"
harness = false

[workspace]
members = [
  ".",
  "switcheroo",
  "example"
]