[package]
name = "async-wormhole"
version = "0.1.1"
authors = ["Bernard Kolobara <me@kolobara.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
description = "Async calls across non-async functions"
readme = "Readme.md"
repository = "https://github.com/bkolobara/async-wormhole/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-utils = "0.1"
crossbeam = "0.7"
switcheroo = { path = "./switcheroo", version = "0.1.1" }

[dev-dependencies]
futures = "0.3"
criterion = "0.3"
libc = "0.2"

[[bench]]
name = "async_benchmark"
harness = false

[workspace]
members = [
  ".",
  "switcheroo",
  "example"
]