[package]
name = "async-wormhole"
version = "0.3.2"
authors = ["Bernard Kolobara <me@kolobara.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
description = "Async calls across non-async functions"
readme = "Readme.md"
repository = "https://github.com/bkolobara/async-wormhole/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
switcheroo = { path = "./switcheroo", version = "0.2" }

[dev-dependencies]
async-executor = "1.4"
futures = "0.3"
criterion = "0.3"
libc = "0.2"
backtrace = "0.3"

[[bench]]
name = "async_benchmark"
harness = false

[workspace]
members = [
  ".",
  "switcheroo",
]