[package]
name = "switcheroo"
version = "0.1.0"
authors = ["Bernard Kolobara <me@kolobara.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "memoryapi", "errhandlingapi"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "switcheroo_benchmark"
harness = false